# Testagon

./: .env.example  .gitignore  README.md  critic.py  generate_invariants.py  pyproject.toml  test_gen.py  testagon.py  unit_tests.py  util.py
testagon/: cli.py  critic.py  generate_invariants.py  unit_tests.py  util.py
